fixed some contrast

--- a/components/layout/Footer/Footer.module.css
+++ b/components/layout/Footer/Footer.module.css
@@ -31,7 +31,7 @@
 
 .desc {
   font-size: 0.81rem;
-  color: rgba(245, 240, 232, 0.42);
+  color: rgba(245, 240, 232, 0.65);
   line-height: 1.7;
   font-weight: 300;
   max-width: 265px;
@@ -46,13 +46,13 @@
 .socialBtn {
   width: 33px;
   height: 33px;
-  border: 1px solid rgba(201, 168, 76, 0.22);
+  border: 1px solid rgba(201, 168, 76, 0.35);
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 0.8rem;
-  color: rgba(245, 240, 232, 0.42);
+  color: rgba(245, 240, 232, 0.7);
   text-decoration: none;
   transition:
     border-color 0.2s,
@@ -86,7 +86,7 @@
 .links a {
   text-decoration: none;
   font-size: 0.81rem;
-  color: rgba(245, 240, 232, 0.42);
+  color: rgba(245, 240, 232, 0.65);
   transition: color 0.2s;
   font-weight: 300;
 }
@@ -95,7 +95,7 @@
 }
 .links li {
   font-size: 0.81rem;
-  color: rgba(245, 240, 232, 0.42);
+  color: rgba(245, 240, 232, 0.65);
   font-weight: 300;
 }
 
@@ -112,7 +112,7 @@
 
 .copy {
   font-size: 0.73rem;
-  color: rgba(245, 240, 232, 0.28);
+  color: rgba(245, 240, 232, 0.5);
 }
 
 .legal {
@@ -121,7 +121,7 @@
 }
 .legal a {
   font-size: 0.73rem;
-  color: rgba(245, 240, 232, 0.28);
+  color: rgba(245, 240, 232, 0.5);
   text-decoration: none;
   transition: color 0.2s;
 }
